Infra/ec2.tf
resource "aws_instance" "java_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  vpc_security_group_ids = [aws_security_group.java_sg.id]
  key_name               = var.key_name
  tags = merge(
    local.common_tags,
    {
      Name = "petclinic"
    },
  )
}

resource "aws_instance" "db_server" {
  ami                    = var.ami_id
  instance_type          = var.instance_type  
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  key_name               = var.key_name
  tags = merge(
    local.common_tags,
    {
      Name = "mysql"
    },
  )
}

resource "aws_security_group" "java_sg" {
  name        = "java-sg"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "java-sg"
  }
}

resource "aws_security_group" "db_sg" {
  name        = "db-sg"
  description = "Allow DB access from Java server"

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.java_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "db-sg"
  }
}
